# AgenticRAG

./: .gitignore  pyproject.toml
Native RAG/src/recommend_function/: chain.py  prompts.py
Native RAG/src/utils/: model.py
Native RAG/src/vectorstore_init_function/: initializer.py  loader.py
src/: main.py
src/config/: config.py
src/recommend_function/: analyze.py  graph.py  recommend.py  retrieve.py  state.py  validate.py
src/utils/: retriever.py
