[project]
name = "agentic-rag"
version = "0.1.0"
description = "LangGraphを使用した人材紹介Agentic RAGシステム"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.2.0",
    "langchain-aws>=1.2.0",
    "langchain-community>=0.4.0",
    "ragas>=0.2.0",
    "langsmith>=0.2.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.35.0",
    "langchain-chroma>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ipykernel>=6.29.0",
]
